fix dark mode text external interface

--- a/src/app/modules/module/external-interface/iso8583configuration/aid-configuration/widgets/aid-config-create-update-dialog/aid-config-create-update-dialog.component.css
+++ b/src/app/modules/module/external-interface/iso8583configuration/aid-configuration/widgets/aid-config-create-update-dialog/aid-config-create-update-dialog.component.css
@@ -20,8 +20,7 @@
       bg-transparent 
       border-0 border-b-2 
       border-gray-300 
-      appearance-none 
-      dark:text-white 
+      appearance-none  
       dark:border-gray-600 
       dark:focus:border-blue-500 
       focus:outline-none 
