--- a/src/app/modules/module/external-interface/iso8583configuration/header-configuration/widgets/header-config-create-update-dialog/header-config-create-update-dialog.component.css
+++ b/src/app/modules/module/external-interface/iso8583configuration/header-configuration/widgets/header-config-create-update-dialog/header-config-create-update-dialog.component.css
@@ -21,7 +21,6 @@
       border-0 border-b-2 
       border-gray-300 
       appearance-none 
-      dark:text-white 
       dark:border-gray-600 
       dark:focus:border-blue-500 
       focus:outline-none 
